Fixed align

--- a/src/tinytoggle/css/tiny-toggle.css
+++ b/src/tinytoggle/css/tiny-toggle.css
@@ -63,7 +63,7 @@
 
 .tt {
 	display: inline-block;
-	line-height: 1em;
+	/*line-height: 1em;*/
 }
 
 .tt-icon {
